fix (layout): fix layout issue

--- a/src/components/Layout/style.module.scss
+++ b/src/components/Layout/style.module.scss
@@ -4,7 +4,6 @@
   background-color: $body-background;
   display: flex;
   justify-content: center;
-  height: calc(100vh - 150px);
-  // align-items: center;
+  height: 100vh;
   padding-top: 150px;
 }
